<resources>
    <string name="app_name">K-Health</string>
    <string name="facebook_app_id">4688792001180912</string>
    <string name="kakao_app_key">1a85779f9a330b70c169a36d76651fb9</string>
    <string name="naver_client_id">VbJRWkNUFQPmLfR95M5J</string>
    <string name="naver_client_password">wkVRZxuSzL</string>
    <string name="naver_client_name">K-Health</string>
    <string name="fb_login_protocol_scheme">fb4688792001180912</string>
    <string name="google_webclient_id">1038647039912-ol1647mlm1l9ve85pqiftdjj2gbt8vro.apps.googleusercontent.com</string>
    <string name="weight">체중</string>
    <string name="height">신장</string>
    <string name="Skeletal_Muscle_Mass">골격근량</string>
    <string name="body_Fat_Percentage">체지방률</string>
    <string name="percent">%</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="default_value">00.0</string>
    <string name="label_food_diary">식단 다이어리</string>
    <string name="label_health_diary">운동 다이어리</string>
    <string name="goal_kcal">목표 섭취량</string>
    <string name="recommend_kcal">권장 섭취량</string>
    <string name="today_total_kcal">오늘의 섭취량</string>
    <string name="remain_kcal">남은 섭취량</string>
    <string name="record">기록하기</string>
    <string name="healthname">운동 이름</string>
    <string name="healthrecord">운동 기록</string>
    <string name="carbon">탄수화물</string>
    <string name="protein">단백질</string>
    <string name="fat">지방</string>
    <string name="label_todo">오늘 할 일</string>
    <string name="label_enroll">등록하기</string>
    <string name="label_completed">임무 완료</string>
    <string name="label_alerttext">의 검색결과가 없습니다.</string>
    <string name="label_task">Task</string>
    <string name="label_record">기록을 해주세요</string>
    <string name="label_gram">중량</string>
    <string name="label_foodtime">식사구분</string>
    <string name="label_kcal">칼로리(kcal)</string>
    <string name="label_carbon">탄수화물(g)</string>
    <string name="label_protein">단백질(g)</string>
    <string name="label_fat">지방(g)</string>
    <string name="label_sugar">당류(g)</string>
    <string name="label_sodium">나트륨(mg)</string>
    <string name="label_cholesterol">콜레스테롤(mg)</string>
    <string name="label_saturatedFattyAcids">포화지방산(g)</string>
    <string name="label_unsaturatedFattyAcids">불포화지방산(g)</string>
    <string name="label_age">나이</string>
    <string name="label_sex">성별</string>
    <string name="label_sex_man">남자</string>
    <string name="label_sex_woman">여자</string>
    <string name="label_set">set</string>
    <string name="label_kg">kg</string>
    <string name="label_count">회</string>
    <string name="label_activity_level">활동지수</string>
    <string name="label_activity_level_1">비활동적</string>
    <string name="label_activity_level_2">낮은활동적</string>
    <string name="label_activity_level_3">보통활동적</string>
    <string name="label_activity_level_4">높은활동적</string>
    <string name="label_retry">재시도</string>
    <string name="label_alert_board">오늘 등록된 게시글이 없어요 \n 오늘 첫 번째 게시글의 주인공이 되어보세요</string>
    <string name="label_description">*일일권장 계산은 사용자의 연령, 체중, 신장, 성별 및 활동 수준 등 \n 고유한 요인에 따른 기준입니다.</string>
    <string name="label_description1">*어떤 활동 지수를 선택해야하나요?</string>
    <string name="label_description2">휴식, 책상작업 또는 일상생활 활동입니다.\n가벼운 운동은 포함되지 않습니다.</string>
    <string name="label_description3">주로 서서하는 일을 하거나 어린 자녀가\n있는 주부에 해당됩니다.</string>
    <string name="label_description4">활동적인 일을 하거나 평소에 가벼운 \n운동을 즐겨 하는 정도에 해당됩니다.</string>
    <string name="label_description5">건설일과 같이 직업 특성상 격한 활동 \n및 평소 신체적 활동이 많은 경우입니다.</string>
    <string name="logout">로그아웃</string>

    <string name="admob_app_id">ca-app-pub-2938102385338359~3538237798</string>
    <string name="admob_ad_id">ca-app-pub-2938102385338359/2256660306</string>
    <string name="admob_test_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="foodservicekey">인증키 입력</string>
    <string name="label_recommend_kcal">일일 권장량 계산</string>
    <string name="label_email">이메일</string>
    <string name="label_password">비밀번호</string>
    <string name="label_check_password">비밀번호 확인</string>

    <string-array name="spinner_mealtime">
        <item>아침식사</item>
        <item>점심식사</item>
        <item>저녁식사</item>
        <item>간식,기타</item>
    </string-array>

</resources>