<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_weight="10"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/recommend_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_recommend_kcal"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/lightblue"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_description"
            app:layout_constraintTop_toBottomOf="@+id/recommend_TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- userInfo -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/age_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textSize="30sp"
            android:text="@string/label_age"
            android:textStyle="bold"
            android:textColor="@color/lightblue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/user_age_EditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:maxLength="3"
            android:textColorHint="@color/gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/weight_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textSize="30sp"
            android:text="@string/weight"
            android:textStyle="bold"
            android:textColor="@color/lightblue"
            app:layout_constraintTop_toTopOf="@+id/user_weight_EditText"
            app:layout_constraintLeft_toLeftOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/user_weight_EditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:hint="@string/kg"
            android:gravity="right"
            android:maxLength="5"
            android:textColorHint="@color/gray"
            app:layout_constraintTop_toBottomOf="@+id/user_age_EditText"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sex_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:textSize="30sp"
            android:text="@string/label_sex"
            android:textStyle="bold"
            android:textColor="@color/lightblue"
            app:layout_constraintTop_toBottomOf="@id/weight_TextView"
            app:layout_constraintLeft_toLeftOf="parent" />

        <RadioGroup
            android:id="@+id/sex_RadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="@id/sex_TextView"
            app:layout_constraintLeft_toLeftOf="@id/user_weight_EditText">

            <RadioButton
                android:id="@+id/sex_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sex_man" />

            <RadioButton
                android:id="@+id/sex_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/label_sex_woman" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_background"
        android:elevation="30dp"
        android:text="제출"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>