<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="10"
    android:orientation="vertical">

    <androidx.legacy.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <LinearLayout
        android:id="@+id/user_info"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="5"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.8"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:text="@string/weight"
                android:textColor="@color/lightblue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="60dp"
                android:text="@string/Skeletal_Muscle_Mass"
                android:textColor="@color/lightblue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="60dp"
                android:text="@string/body_Fat_Percentage"
                android:textColor="@color/lightblue"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/user_weight_EditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:gravity="right"
                android:hint="@string/kg"
                android:maxLength="5"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/user_muscle_EditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:gravity="right"
                android:hint="@string/kg"
                android:maxLength="5"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/user_fat_EditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:gravity="right"
                android:hint="%"
                android:maxLength="5"
                android:textColorHint="@color/gray" />
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_background"
        android:elevation="30dp"
        android:text="제출"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>