<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="영양 정보"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:textColor="@color/black" />

            </androidx.appcompat.widget.Toolbar>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/foodName_Info_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:paddingLeft="15dp"
                android:textColor="@color/gray"
                android:textSize="30sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                tools:text="음식이름" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/gram"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/darkblue"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:paddingLeft="15dp"
                android:text="@string/label_gram"
                app:layout_constraintLeft_toLeftOf="@id/foodName_Info_TextView"
                app:layout_constraintTop_toBottomOf="@+id/foodName_Info_TextView"
                tools:text="@string/label_gram" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/foodGram_Info_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:paddingLeft="15dp"
                app:layout_constraintTop_toBottomOf="@id/gram"
                app:layout_constraintLeft_toLeftOf="@id/gram"
                tools:text="100g"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@id/foodGram_Info_TextView"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/foodtime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/darkblue"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:paddingLeft="15dp"
                android:text="@string/label_foodtime"
                app:layout_constraintLeft_toLeftOf="@id/foodName_Info_TextView"
                app:layout_constraintTop_toBottomOf="@+id/foodGram_Info_TextView"
                tools:text="@string/label_foodtime" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/foodTime_Info_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:paddingLeft="15dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/foodtime"
                app:layout_constraintLeft_toLeftOf="@id/gram"
                tools:text="아침식사"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@id/foodTime_Info_TextView"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/kcal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/darkblue"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:text="@string/label_kcal"
                app:layout_constraintLeft_toLeftOf="@id/foodName_Info_TextView"
                app:layout_constraintTop_toBottomOf="@+id/foodTime_Info_TextView"
                app:layout_constraintRight_toLeftOf="@id/carbon"
                tools:text="@string/label_kcal" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/carbon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/darkblue"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:text="@string/label_carbon"
                app:layout_constraintLeft_toRightOf="@id/kcal"
                app:layout_constraintTop_toBottomOf="@+id/foodTime_Info_TextView"
                app:layout_constraintRight_toLeftOf="@id/protein"
                tools:text="@string/label_carbon" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/protein"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/darkblue"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:text="@string/label_protein"
                app:layout_constraintLeft_toRightOf="@id/carbon"
                app:layout_constraintTop_toBottomOf="@+id/foodTime_Info_TextView"
                app:layout_constraintRight_toRightOf="parent"
                tools:text="@string/label_protein" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/foodKcal_Info_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/darkblue"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kcal"
                app:layout_constraintRight_toLeftOf="@id/carbon"
                tools:text="@string/default_value" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/foodCarbon_Info_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/darkblue"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintLeft_toRightOf="@id/foodKcal_Info_TextView"
                app:layout_constraintTop_toBottomOf="@+id/carbon"
                app:layout_constraintRight_toLeftOf="@id/foodProtein_Info_TextView"
                tools:text="@string/default_value" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/foodProtein_Info_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/darkblue"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintLeft_toRightOf="@id/foodCarbon_Info_TextView"
                app:layout_constraintTop_toBottomOf="@+id/protein"
                app:layout_constraintRight_toRightOf="parent"
                tools:text="@string/default_value" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/darkblue"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:text="@string/label_fat"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/foodKcal_Info_TextView"
                app:layout_constraintRight_toLeftOf="@id/sugar"
                tools:text="@string/label_fat" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sugar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/darkblue"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:text="@string/label_sugar"
                app:layout_constraintLeft_toRightOf="@id/fat"
                app:layout_constraintTop_toBottomOf="@+id/foodCarbon_Info_TextView"
                app:layout_constraintRight_toLeftOf="@id/sodium"
                tools:text="@string/label_sugar" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sodium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/darkblue"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:text="@string/label_sodium"
                app:layout_constraintLeft_toRightOf="@id/sugar"
                app:layout_constraintTop_toBottomOf="@+id/foodProtein_Info_TextView"
                app:layout_constraintRight_toRightOf="parent"
                tools:text="@string/label_sodium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/foodFat_Info_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/darkblue"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/label_cholesterol"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fat"
                app:layout_constraintRight_toLeftOf="@id/foodSugar_Info_TextView"
                tools:text="@string/default_value" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/foodSugar_Info_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/darkblue"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintLeft_toRightOf="@id/foodFat_Info_TextView"
                app:layout_constraintTop_toBottomOf="@+id/sugar"
                app:layout_constraintRight_toLeftOf="@id/foodSodium_Info_TextView"
                tools:text="@string/default_value" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/foodSodium_Info_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/darkblue"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintLeft_toRightOf="@id/foodSugar_Info_TextView"
                app:layout_constraintTop_toBottomOf="@+id/sodium"
                app:layout_constraintRight_toRightOf="parent"
                tools:text="@string/default_value" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/cholesterol"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/darkblue"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:text="@string/label_cholesterol"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/foodFat_Info_TextView"
                app:layout_constraintRight_toLeftOf="@id/saturatedFattyAcids"
                tools:text="@string/label_cholesterol" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/saturatedFattyAcids"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/darkblue"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:text="@string/label_saturatedFattyAcids"
                app:layout_constraintLeft_toRightOf="@id/cholesterol"
                app:layout_constraintTop_toBottomOf="@+id/foodSugar_Info_TextView"
                app:layout_constraintRight_toLeftOf="@id/unsaturatedFattyAcids"
                tools:text="@string/label_saturatedFattyAcids" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/unsaturatedFattyAcids"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/darkblue"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:text="@string/label_unsaturatedFattyAcids"
                app:layout_constraintLeft_toRightOf="@id/saturatedFattyAcids"
                app:layout_constraintTop_toBottomOf="@+id/foodSodium_Info_TextView"
                app:layout_constraintRight_toRightOf="parent"
                tools:text="@string/label_unsaturatedFattyAcids" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/foodCholesterol_Info_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/darkblue"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cholesterol"
                app:layout_constraintRight_toLeftOf="@id/foodSaturatedFattyAcids_Info_TextView"
                tools:text="@string/default_value" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/foodSaturatedFattyAcids_Info_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/darkblue"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintLeft_toRightOf="@id/foodCholesterol_Info_TextView"
                app:layout_constraintTop_toBottomOf="@+id/saturatedFattyAcids"
                app:layout_constraintRight_toLeftOf="@id/foodUnsaturatedFattyAcids_Info_TextView"
                tools:text="@string/default_value" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/foodUnsaturatedFattyAcids_Info_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/darkblue"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintLeft_toRightOf="@id/foodSaturatedFattyAcids_Info_TextView"
                app:layout_constraintTop_toBottomOf="@+id/unsaturatedFattyAcids"
                app:layout_constraintRight_toRightOf="parent"
                tools:text="@string/default_value" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>